@@ -23,6 +23,9 @@ RELEASE 0.04 -
   - Function action fixes:  None is now a successful return value.
     Exceptions are now reported.  Document function actions.
 
+  - Add 'Action' and 'Scanner' to the global keywords so SConscript
+    files can use them too.
+
 
 
 RELEASE 0.03 - Fri, 11 Jan 2002 01:09:30 -0600
